--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@ e anche la scelta dei testi sembra privilegiare sempre quelli meno sperimentali.
             <nav><ul>
                 <li><a href="">Via del bollo III Milano (MI)
                     
-                    <p class="footar">Termini e condizioni di acquisto 
-                    • Politica sulla Privacy • Imposta cookie </a></li></p>
+                    <div class="footar">Termini e condizioni di acquisto 
+                    • Politica sulla Privacy • Imposta cookie </a></li></div>
                 <li><a href=""><svg width="245" height="56" viewBox="0 0 245 56" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M27.68 56L26 47.12H13.36L11.68 56H0.8L11.6 -3.8147e-06H28.16L38.4 56H27.68ZM19.52 10.4L16.4 29.04L14.64 38.56H24.64L22.8 29.04L19.68 10.4H19.52ZM43.0588 -3.8147e-06H64.3388C67.6988 1.12 70.5521 3.2 72.8988 6.24C75.2988 9.22666 76.4988 12.9067 76.4988 17.28C76.4988 24.4267 73.6721 29.68 68.0188 33.04L76.0988 56H64.8988L58.0988 35.6H53.8588V56H43.0588V-3.8147e-06ZM53.8588 9.6V26.64H60.7388C61.6454 26.4267 62.6321 25.52 63.6988 23.92C64.8188 22.2667 65.3788 20.3467 65.3788 18.16C65.3788 15.9733 64.8988 14.0533 63.9388 12.4C63.0321 10.7467 62.1254 9.81333 61.2188 9.6H53.8588ZM90.5363 9.6H78.4563V-3.8147e-06H113.496V9.6H101.416V56H90.5363V9.6ZM111.091 44.16H122.611V56H111.091V44.16ZM129.621 56V-3.8147e-06H140.581V46.72H157.221V56H129.621ZM162.668 56V-3.8147e-06H173.628V56H162.668ZM186.46 -3.8147e-06H205.66V9.6H190.3L190.06 10.08L202.86 33.44C205.473 38.1333 206.78 41.7067 206.78 44.16C206.78 49.5467 204.993 53.4933 201.42 56H180.22V46.72H196.78L197.02 46.24L182.62 20.4C180.54 16.6667 179.5 13.6267 179.5 11.28C179.5 5.73333 181.82 1.97333 186.46 -3.8147e-06ZM221.396 9.6H209.316V-3.8147e-06H244.356V9.6H232.276V56H221.396V9.6Z" fill="white"/>
                     </svg>
